# hcsv

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  hcsv.cabal
src/: HCsv.hs
src/HCsv/: Adt.hs  Parser.hs  Util.hs
test/: HCsvSpec.hs  Spec.hs
